--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "gulp-connect-php": "~0.0.7"
   },
   "dependencies": {
-    "gulp-minify-css": "^0.3.13",
-    "gulp-imagemin": "^1.2.1",
-    "rimraf": "^2.2.8",
-    "gulp-uglify": "~1.2.0",
-    "gulp-htmlbuild": "^0.3.0",
     "event-stream": "~3.3.1",
     "gulp-concat": "~2.5.2",
     "gulp-gzip": "~1.1.0",
-    "rsyncwrapper": "~0.4.2",
-    "gulp-util": "~3.0.4",
-    "gulp-strip-debug": "~1.0.2",
+    "gulp-htmlbuild": "^0.3.0",
+    "gulp-imagemin": "^1.2.1",
     "gulp-inject": "~1.5.0",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-strip-debug": "~1.0.2",
+    "gulp-uglify": "~1.2.0",
     "gulp-usemin": "0.3.11",
-    "require-dir": "~0.3.0"
+    "gulp-util": "~3.0.4",
+    "require-dir": "~0.3.0",
+    "rimraf": "^2.2.8",
+    "rsyncwrapper": "~0.4.2",
+    "sass": "^1.89.2"
   }
 }
